--- a/templates/vault.html
+++ b/templates/vault.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Valut temaplte/h1>
+    <h1>Valut temaplte </h1>
+        <a href="/">Go to Home Page</a>
 </body>
 </html>
