--- a/templates/vault.html
+++ b/templates/vault.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Valut temaplte </h1>
-        <a href="/">Go to Home Page</a>
+    <h2>Hello {{.user}}</h2>
 </body>
 </html>
