--- a/templates/vault.html
+++ b/templates/vault.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js" integrity="sha384-Akqfrbj/HpNVo8k11SXBb6TlBWmXXlYQrCSqEWmyKJe+hDm3Z/B2WVG4smwBkRVm" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
     <p>{{ .error}}</p>
     {{ end }}
 
-    <form action="/vault/addNewSite" method="post">
+    <form action="/vault/addSite" method="post">
         <input type="text" name="site" placeholder="site">
         <input type="password" name="password" placeholder="passoword">
         <input type="text" name="notes" placeholder="notes">
@@ -24,7 +25,11 @@
     <h2>List of passports:</h2>
     <ul>
         {{range .siteData}}
-        <li>site: {{.Name}} | password: {{.Password}} | notes: {{.Notes}}</li>
+        <li>
+            site: {{.Name}} | password: {{.Password}} | notes: {{.Notes}}
+            <button hx-post="/vault/editSite" hx-target="body">Edit</button>
+            <button hx-post="/vault/deleteSite" hx-target="body">Delete</button>
+        </li>
         {{end}}
     </ul>
 </body>
