--- a/templates/vault.html
+++ b/templates/vault.html
@@ -28,7 +28,7 @@
         <li>
             site: {{.Name}} | password: {{.Password}} | notes: {{.Notes}}
             <button hx-post="/vault/editSite" hx-target="body">Edit</button>
-            <button hx-post="/vault/deleteSite" hx-target="body">Delete</button>
+            <button hx-post="/vault/deleteSite/{{.ID}}" hx-target="closest li" hx-swap="delete">Delete</button>
         </li>
         {{end}}
     </ul>
