--- a/templates/vault.html
+++ b/templates/vault.html
@@ -3,35 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js" integrity="sha384-Akqfrbj/HpNVo8k11SXBb6TlBWmXXlYQrCSqEWmyKJe+hDm3Z/B2WVG4smwBkRVm" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Your Vault</title>
+    <link rel="stylesheet" href="/static/css/style.css"> 
 </head>
 <body>
-    <h1>Valut temaplte </h1>
-    <h2>Hello {{.user}}</h2>
+    <div id="login-container">
+        <div id="login-header">
+            <h2>Your Vault</h2>
+        </div>
 
-    <h2>Add New Passport:</h2>
+        <div id="login-form-div">
+            <h3 class="form-title">Add New Site:</h3>
+            <form action="/vault/addSite" method="post" class="add-form">
+                <input type="text" name="site" placeholder="Site">
+                <input type="password" name="password" placeholder="Password">
+                <input type="text" name="notes" placeholder="Notes">
+                <button type="submit" class="add-button">Add New Site</button>
+            </form>
+        </div>
+
+        <div id="error-div">
+            {{ if .error }}
+            <p>{{ .error}}</p>
+            {{ end }}
+        </div>
+        
+        <div class="site-list-section">
+            <h3 class="list-title">Your Passwords:</h3>
+            <ul class="site-list">
+                {{range .siteData}}
+                <li class="site-item">
+                    <span class="site-info">
+                        <p class="site-name">{{.Name}}</p>
+                        <p class="site-details">Password: {{.Password}} | Notes: {{.Notes}}</p>
+                    </span>
+                    <div class="action-buttons">
+                        <button class="edit-button" hx-post="/vault/editSite/{{.ID}}" hx-target="closest li">Edit</button>
+                        <button class="delete-button" hx-post="/vault/deleteSite/{{.ID}}" hx-target="closest li" hx-swap="delete">Delete</button>
+                    </div>
+                </li>
+                {{end}}
+            </ul>
+        </div>
+    </div>
     
-    
-    <form action="/vault/addSite" method="post">
-        <input type="text" name="site" placeholder="site">
-        <input type="password" name="password" placeholder="passoword">
-        <input type="text" name="notes" placeholder="notes">
-        <button type="submit">Add New Site</button>
-    </form>
-    <h2>List of passports:</h2>
-    <ul>
-        {{range .siteData}}
-        <li>
-            site: {{.Name}} | password: {{.Password}} | notes: {{.Notes}}
-            <button hx-post="/vault/editSite/{{.ID}}" hx-target="closest li" >Edit</button>
-            <button hx-post="/vault/deleteSite/{{.ID}}" hx-target="closest li" hx-swap="delete">Delete</button>
-        </li>
-        {{end}}
-    </ul>
-    
-    {{ if .error }}
-    <p>{{ .error}}</p>
-    {{ end }}
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js" integrity="sha384-Akqfrbj/HpNVo8k11SXBb6TlBWmXXlYQrCSqEWmyKJe+hDm3Z/B2WVG4smwBkRVm" crossorigin="anonymous"></script>
 </body>
 </html>
