--- a/templates/vault.html
+++ b/templates/vault.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/css/style.css"> 
 </head>
 <body>
-    <div id="login-container">
+    <div id="vault-container">
         <div id="login-header">
             <h2>Your Vault</h2>
         </div>
