--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,7 @@ body {
     margin-bottom: 20px;
 }
 
-input[type="text"], 
+input[type="text"],
 input[type="password"] {
     width: calc(100% - 24px);
     padding: 12px;
@@ -165,7 +165,8 @@ button[type="submit"]:hover {
     color: #222;
 }
 
-.form-title, .list-title {
+.form-title,
+.list-title {
     font-size: 20px;
     color: #f7b731;
     margin-bottom: 15px;
@@ -217,7 +218,9 @@ button[type="submit"]:hover {
     gap: 8px;
 }
 
-.edit-button, .delete-button, .copy-password-button{
+.edit-button,
+.delete-button,
+.copy-password-button {
     padding: 8px 12px;
     border-radius: 5px;
     border: none;
@@ -244,10 +247,54 @@ button[type="submit"]:hover {
     background-color: #e05e55;
 }
 
-.copy-password-button{
+.copy-password-button {
     background-color: #e05e1d;
 }
 
-.copy-password-button:hover{
+.copy-password-button:hover {
     background-color: #db5816;
+}
+
+#toast {
+    visibility: hidden; /* Hide the toast by default */
+    min-width: 250px;
+    margin-left: -125px; /* Center the toast horizontally */
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1; /* Make sure it's on top of other content */
+    left: 50%;
+    bottom: 30px; /* Position it at the bottom of the page */
+    font-size: 17px;
+}
+
+#toast.show {
+    visibility: visible; /* Show the toast */
+    /* Add animation for fading in and out */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 1.5s;
+    animation: fadein 0.5s, fadeout 0.5s 1.5s;
+}
+
+/* Keyframes for animations */
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
 }
