--- a/static/css/style.css
+++ b/static/css/style.css
@@ -178,12 +178,35 @@ button[type="submit"]:hover {
     margin-top: 20px;
     padding-top: 15px;
     border-top: 1px solid #444;
+    flex:1;
+    min-height: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .site-list {
     list-style: none;
     padding: 0;
     margin: 0;
+    overflow-y: auto;
+}
+
+.site-list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.site-list::-webkit-scrollbar-track {
+  background: #222;
+}
+
+.site-list::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 4px;
+  border: 2px solid #222;
+}
+
+.site-list::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
 }
 
 .site-item {
