--- a/static/css/style.css
+++ b/static/css/style.css
@@ -333,7 +333,7 @@ button[type="submit"]:hover {
     box-sizing: border-box;
 }
 
-.password-wrapper .generate-icon {
+.generate-icon-container {
     position: absolute;
     right: 5px;
     top: 40%;
@@ -344,3 +344,29 @@ button[type="submit"]:hover {
     pointer-events: auto;
 }
 
+.password-wrapper .generate-icon {
+    width: 50px;
+    height: 50px;
+}
+
+.tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute; 
+    z-index: 1;
+    bottom: 110%; 
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.generate-icon-container:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
