--- a/templates/vault.html
+++ b/templates/vault.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Vault</title>
     <link rel="stylesheet" href="/static/css/style.css">
-    
+
 </head>
 
 <body>
@@ -22,17 +22,18 @@
                 <input type="text" name="site" placeholder="Site">
 
                 <div class="password-wrapper">
-                    <input type="password" name="password" placeholder="Password">
-                    <a href="/login">
+                    <input type="password" name="password" placeholder="Password" value="{{.generatedPassword}}">
+                    <a href="/vault/generatePassword" class="generate-icon-container">
                         <img src="/static/images/create_logo.png" alt="Generate Password" class="generate-icon">
+                        <span class="tooltip-text">Generate Password</span>
                     </a>
                 </div>
-                
+
                 <input type="text" name="notes" placeholder="Notes">
                 <button type="submit" class="add-button">Add New Site</button>
             </form>
         </div>
-        
+
         <div id="error-div">
             {{ if .error }}
             <p>{{ .error}}</p>
@@ -51,12 +52,12 @@
                     <div class="action-buttons">
                         <button class="copy-password-button" hx-post="/vault/copyPassword/{{.ID}}" hx-swap="none">Copy
                             Passoword</button>
-                            <button class="edit-button" hx-post="/vault/editSite/{{.ID}}"
+                        <button class="edit-button" hx-post="/vault/editSite/{{.ID}}"
                             hx-target="closest li">Edit</button>
-                            <button class="delete-button" hx-post="/vault/deleteSite/{{.ID}}" hx-target="closest li"
+                        <button class="delete-button" hx-post="/vault/deleteSite/{{.ID}}" hx-target="closest li"
                             hx-swap="delete">Delete</button>
-                        </div>
-                    </li>
+                    </div>
+                </li>
                 {{end}}
             </ul>
         </div>
