--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,6 +1,6 @@
 <form action="/vault/editSiteConfirm/{{.id}}" method="post">
-    <input type="text" name="site" placeholder="site">
-    <input type="text" name="password" placeholder="password">
-    <input type="text" name="notes" placeholder="notes">
+    <input type="text" name="site" value="{{.site.Name}}">
+    <input type="text" name="password" value="{{.site.Password}}">
+    <input type="text" name="notes" value="{{.site.Notes}}">
     <button type="submit">Edit</button>
 </form>
