auth with github

--- a/templates/login.html
+++ b/templates/login.html
@@ -32,10 +32,14 @@
 
         <div id="social-login-div">
             <button class="social-button github">
-                <img src="/static/images/github_logo.png" alt="GitHub Logo"> GitHub
+                <a href="/auth/github/login">
+                    <img src="/static/images/github_logo.png" alt="GitHub Logo">
+                </a>
             </button>
             <button class="social-button google">
-                <img src="/static/images/google_logo.png" alt="Google Logo"> Google
+                <a href="/auth/google/login">
+                    <img src="/static/images/google_logo.png" alt="Google Logo">
+                </a>
             </button>
         </div>
     </div>
